syntax = "proto3";

package go.micro.srv.GetUserHouses;

service Example {
	rpc GetUserHouses(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	bytes Data = 3;
}
